There are 24 hours in a day, not 12. Duh, Joe.
Added answer to second part of question in number 6 - JD

--- a/numbers_and_types.ipynb
+++ b/numbers_and_types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,21 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43200\n"
+      "86400\n"
      ]
     }
    ],
    "source": [
     "seconds_per_minute = 60\n",
     "minutes_per_hour = 60\n",
-    "hours_per_day = 12\n",
+    "hours_per_day = 24\n",
     "\n",
     "seconds_per_hour = (seconds_per_minute) * (minutes_per_hour)\n",
     "seconds_per_day = (seconds_per_hour) * (hours_per_day)\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,14 +86,14 @@
     "\n",
     "minutes_per_hour = 60\n",
     "\n",
-    "hours_per_day = 12\n",
+    "hours_per_day = 24\n",
     "\n",
     "print(seconds_per_day)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +119,22 @@
      "text": [
       "12\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' No, because floating point numbers and integers are not the same thing '"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(seconds_per_day // seconds_per_hour)"
+    "print(seconds_per_day // seconds_per_hour)\n",
+    "\n",
+    "''' No, because floating point numbers and integers are not the same thing '''"
    ]
   }
  ],
